--- a/durenchente.html
+++ b/durenchente.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>O que fazer durante uma enchente</title>
-<link rel="stylesheet" href="/css/durenchente.css">
+<link rel="stylesheet" href="./css/durenchente.css">
 </head>
 <body>
 
@@ -19,7 +19,7 @@
             <p>2. Evite atravessar áreas alagadas ou correntezas.</p>
             <p>3. Siga as orientações das autoridades locais.</p>
         </section>
-        <img src="/img/enchente.jfif" alt="Enchente">
+        <img src="./img/enchente.jfif" alt="Enchente">
     </main>
     <footer>
         <p>Para mais informações, consulte os órgãos de defesa civil do Rio Grande do Sul.</p>
