--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ajuda sobre a enchente do RS</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="./css/index.css"> <!-- Importa um arquivo CSS externo para estilização -->
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="durenchente.html">Durante a enchente</a></li>
                 <li><a href="pos.html">Após a Enchente</a></li>
-                <li><a href="#doencas">Doenças</a></li>
+                <li><a href="#doencas">Doenças</a></li> <!-- Link âncora para a seção de doenças -->
                 <li><a href="precaucao.html">Precauções</a></li>
             </ul>
         </nav>
@@ -24,37 +24,37 @@
         <section id="doencas">
             <h2>Doenças Relacionadas à Enchente</h2>
             <div class="panel">
-                <img src="/img/rato.jpg" alt="Leptospirose">
-                <h3>Leptospirose</h3>
-                <p>Doença causada pela bactéria Leptospira, presente na urina de ratos e outros animais.</p>
+                <img src="./img/rato.jpg" alt="Leptospirose"> <!-- Imagem de leptospirose com texto alternativo -->
+                <h3>Leptospirose</h3> <!-- Titulo sobre a imagem -->
+                <p>Doença causada pela bactéria Leptospira, presente na urina de ratos e outros animais.</p> <!-- Descrição sobre a imagem e a doença -->
             </div>
             <div class="panel">
-                <img src="/img/;tetano.jpg" alt="Tétano">
+                <img src="./img/;tetano.jpg" alt="Tétano">
                 <h3>Tétano</h3>
                 <p>Infecção bacteriana grave que pode ocorrer por meio de ferimentos expostos à água contaminada.</p>
             </div>
             <div class="panel">
-                <img src="/img/diarreia.jpg" alt="Diarreia Aguda">
+                <img src="./img/diarreia.jpg" alt="Diarreia Aguda">
                 <h3>Diarreia Aguda</h3>
                 <p>Doença gastrointestinal causada por ingestão de água ou alimentos contaminados.</p>
             </div>
             <div class="panel">
-                <img src="/img/hepatite A.jpg" alt="Hepatite A">
+                <img src="./img/hepatite A.jpg" alt="Hepatite A">
                 <h3>Hepatite A</h3>
                 <p>Infecção viral do fígado causada pela ingestão de alimentos ou água contaminados.</p>
             </div>
             <div class="panel">
-                <img src="/img/dengue.webp" alt="Dengue">
+                <img src="./img/dengue.webp" alt="Dengue">
                 <h3>Dengue</h3>
                 <p>Doença viral transmitida pelo mosquito Aedes aegypti, que se prolifera em águas paradas.</p>
             </div>
             <div class="panel">
-                <img src="/img/animais.jfif" alt="Animais Peçonhentos">
+                <img src="./img/animais.jfif" alt="Animais Peçonhentos">
                 <h3>Animais Peçonhentos</h3>
                 <p>Aranhas, cobras, lacraias e escorpiões podem surgir em áreas alagadas.</p>
             </div>
         </section>
     </main>
-<script src="script.js"></script>
+<script src="script.js"></script> <!-- Inclusão de um script externo para funcionalidades adicionais -->
 </body>
 </html>
