--- a/precaucao.html
+++ b/precaucao.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Precauções após uma enchente</title>
-<link rel="stylesheet" href="/css/precaucao.css">
+<link rel="stylesheet" href="./css/precaucao.css">
 </head>
 <body>
 
