--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <ul>
                 <li><a href="durenchente.html">Durante a enchente</a></li>
                 <li><a href="pos.html">Após a Enchente</a></li>
-                <li><a href="#doencas">Doenças</a></li> <!-- Link âncora para a seção de doenças -->
-                <li><a href="precaucao.html">Precauções</a></li>
+                <li><a href="doenças.html">Sintomas e doenças</a></li> <!-- Link âncora para a seção de doenças -->
+                <li><a href="precaucao.html">Precauções e Prevenções</a></li>
             </ul>
         </nav>
     </header>
