--- a/precaucao.html
+++ b/precaucao.html
@@ -10,7 +10,7 @@
 
 <div class="container">
     <header>
-        <h1>Precauções após uma enchente</h1>
+        <h1>Precauções e Prevenções com doenças</h1>
     </header>
     <main>
         <section>
