--- a/doenças.html
+++ b/doenças.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verificador de Sintomas</title>
-    <link rel="stylesheet" href="./css/doenças.css">
+    <link rel="stylesheet" href="./css/doenças.css"> <!-- Importa um arquivo CSS externo para estilização -->
 </head>
 <body>
     <div class="container">
         <h1>Verificador de Sintomas</h1>
         <form id="symptomForm">
-            <h2>Selecione os sintomas que você está sentindo:</h2>
+            <h2>Selecione os sintomas que você está sentindo:</h2> <!-- Instruções para o usuário -->
             <ul>
                 <li>
                     <label>
@@ -169,13 +169,13 @@
                     </label>
                 </li>
             </ul>
-            <button type="button" onclick="checkSymptoms()">Verificar</button>
+            <button type="button" onclick="checkSymptoms()">Verificar</button> <!-- Botão para verificar sintomas -->
         </form>
 
         <div id="result">
-        </div>
+        </div> <!-- Div para mostrar os resultados -->
     </div>
 
-    <script src="/js/doença.js"></script>
+    <script src="/js/doença.js"></script> <!-- Inclusão de um script externo para funcionalidades adicionais -->
 </body>
 </html>
