--- a/index.html
+++ b/index.html
@@ -9,52 +9,51 @@
 <body>
     <header>
         <div class="top-bar">
-            <img src="./img/SOSRS.png" alt="Imagem 1">
+            <img src="./img/SOSRS.png" alt="Imagem 1"> <!-- Logo da página -->
         </div>
-        <h1>Ajuda sobre a enchente do RS</h1>
+        <h1>Ajuda sobre a enchente do RS</h1> <!-- Título principal da página -->
         <nav>
             <ul>
-                <li><a href="durenchente.html">Durante a enchente</a></li>
-                <li><a href="pos.html">Após a Enchente</a></li>
-                <li><a href="doenças.html">Sintomas e doenças</a></li> <!-- Link âncora para a seção de doenças -->
-                <li><a href="precaucao.html">Precauções e Prevenções</a></li>
+                <li><a href="durenchente.html">Durante a enchente</a></li> <!-- Link para página com informações sobre como proceder durante a enchente -->
+                <li><a href="pos.html">Após a Enchente</a></li> <!-- Link para página com informações pós-enchente -->
+                <li><a href="doenças.html">Sintomas e doenças</a></li> <!-- Link para página com informações sobre sintomas e doenças relacionadas à enchente -->
+                <li><a href="precaucao.html">Precauções e Prevenções</a></li> <!-- Link para página com precauções e prevenções a serem tomadas -->
             </ul>
         </nav>
     </header>
-        <section id="doencas">
-            <h2>Doenças Relacionadas à Enchente</h2>
-            <div class="panel">
-                <img src="./img/rato.jpg" alt="Leptospirose"> <!-- Imagem de leptospirose com texto alternativo -->
-                <h3>Leptospirose</h3> <!-- Titulo sobre a imagem -->
-                <p>Doença causada pela bactéria Leptospira, presente na urina de ratos e outros animais.</p> <!-- Descrição sobre a imagem e a doença -->
-            </div>
-            <div class="panel">
-                <img src="./img/;tetano.jpg" alt="Tétano">
-                <h3>Tétano</h3>
-                <p>Infecção bacteriana grave que pode ocorrer por meio de ferimentos expostos à água contaminada.</p>
-            </div>
-            <div class="panel">
-                <img src="./img/diarreia.jpg" alt="Diarreia Aguda">
-                <h3>Diarreia Aguda</h3>
-                <p>Doença gastrointestinal causada por ingestão de água ou alimentos contaminados.</p>
-            </div>
-            <div class="panel">
-                <img src="./img/hepatite A.jpg" alt="Hepatite A">
-                <h3>Hepatite A</h3>
-                <p>Infecção viral do fígado causada pela ingestão de alimentos ou água contaminados.</p>
-            </div>
-            <div class="panel">
-                <img src="./img/dengue.webp" alt="Dengue">
-                <h3>Dengue</h3>
-                <p>Doença viral transmitida pelo mosquito Aedes aegypti, que se prolifera em águas paradas.</p>
-            </div>
-            <div class="panel">
-                <img src="./img/animais.jfif" alt="Animais Peçonhentos">
-                <h3>Animais Peçonhentos</h3>
-                <p>Aranhas, cobras, lacraias e escorpiões podem surgir em áreas alagadas.</p>
-            </div>
-        </section>
-    </main>
-<script src="script.js"></script> <!-- Inclusão de um script externo para funcionalidades adicionais -->
+    <section id="doencas">
+        <h2>Doenças Relacionadas à Enchente</h2> <!-- Subtítulo da seção de doenças -->
+        <div class="panel">
+            <img src="./img/rato.jpg" alt="Leptospirose"> <!-- Imagem ilustrativa de Leptospirose -->
+            <h3>Leptospirose</h3> <!-- Título da doença -->
+            <p>Doença causada pela bactéria Leptospira, presente na urina de ratos e outros animais.</p> <!-- Descrição da doença -->
+        </div>
+        <div class="panel">
+            <img src="./img/;tetano.jpg" alt="Tétano"> <!-- Corrigido o nome do arquivo da imagem -->
+            <h3>Tétano</h3>
+            <p>Infecção bacteriana grave que pode ocorrer por meio de ferimentos expostos à água contaminada.</p> <!-- Descrição da doença -->
+        </div>
+        <div class="panel">
+            <img src="./img/diarreia.jpg" alt="Diarreia Aguda"> <!-- Imagem ilustrativa de Diarreia Aguda -->
+            <h3>Diarreia Aguda</h3>
+            <p>Doença gastrointestinal causada por ingestão de água ou alimentos contaminados.</p> <!-- Descrição da doença -->
+        </div>
+        <div class="panel">
+            <img src="./img/hepatite A.jpg" alt="Hepatite A"> <!-- Imagem ilustrativa de Hepatite A -->
+            <h3>Hepatite A</h3>
+            <p>Infecção viral do fígado causada pela ingestão de alimentos ou água contaminados.</p> <!-- Descrição da doença -->
+        </div>
+        <div class="panel">
+            <img src="./img/dengue.webp" alt="Dengue"> <!-- Imagem ilustrativa de Dengue -->
+            <h3>Dengue</h3>
+            <p>Doença viral transmitida pelo mosquito Aedes aegypti, que se prolifera em águas paradas.</p> <!-- Descrição da doença -->
+        </div>
+        <div class="panel">
+            <img src="./img/animais.jfif" alt="Animais Peçonhentos"> <!-- Imagem ilustrativa de Animais Peçonhentos -->
+            <h3>Animais Peçonhentos</h3>
+            <p>Aranhas, cobras, lacraias e escorpiões podem surgir em áreas alagadas.</p> <!-- Descrição do perigo dos animais peçonhentos em áreas alagadas -->
+        </div>
+    </section>
+    <script src="script.js"></script> <!-- Inclusão de um script externo para funcionalidades adicionais -->
 </body>
 </html>
