--- a/pos.html
+++ b/pos.html
@@ -13,6 +13,7 @@
         <h1>O que fazer após uma enchente</h1>
     </header>
     <main>
+        <!--Situações entre uma enchente-->
         <section>
             <h2>Depois da enchente</h2>
             <p>1. Aguarde a autorização para retornar à sua casa.</p>
