--- a/precaucao.html
+++ b/precaucao.html
@@ -13,7 +13,8 @@
         <h1>Precauções e Prevenções com doenças</h1>
     </header>
     <main>
-        <section>
+        <!--Explicação sobre como se previnir de cada doença ou perigo-->
+        <section> 
             <h2>Leptospirose</h2>
             <p>1. Evite contato direto com água contaminada ou lama.</p>
             <p>2. Use equipamentos de proteção, como botas e luvas.</p>
