--- a/durenchente.html
+++ b/durenchente.html
@@ -13,6 +13,7 @@
         <h1>O que fazer durante uma enchente</h1>
     </header>
     <main>
+        <!--Explicação sobre enchente-->
         <section>
             <h2>Durante a enchente</h2>
             <p>1. Mantenha-se em local seguro, longe de rios e áreas alagadas.</p>
